--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -33,7 +33,7 @@
     display: none;
   }
   .hero__container {
-    max-width: 1750px;
+    max-width: 1850px;
     position: relative;
     top: -50px;
     display: block;
@@ -42,7 +42,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: right;
-      height: 50vh;
+      height: 70vh;
       z-index: -1;
     }
     .hero__action {
